# cursed-install

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
docs/: occult-sources.md
src/: cli.rs  config.rs  creepy_messages.rs  escalation.rs  installer.rs  log_generator.rs  main.rs  occult_messages.rs  scanner.rs
src/stages/: ai.rs  bios.rs  boot.rs  bootloader.rs  cloud.rs  container.rs  mod.rs  xorg.rs
src/ui/: mod.rs
