[package]
name = "cursed-install"
version = "0.6.0"
edition = "2021"
authors = ["Kerim Buyukakyuz", "Mark Riechers"]
description = "A nostalgic infinite installer simulator that knows too much about you"

[dependencies]
crossterm = "0.27"
rand = "0.8"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.32"
chrono = "0.4"
